# old-tom-morris

./: README.md  docker-compose.yml  pyproject.toml
src/: data_pull.py  server.py
src/data_sources/: courses.py  the_open.py
src/database/: connection.py  schema.py
