[tool.poetry]
name = "old-tom-morris"
version = "0.1.0"
description = ""
authors = ["Alex Evans <alex.evans.d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^1.4.39"
requests = "^2.28.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
